--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,7 @@ body {
 .cookie {
     width: 200px;
     height: 200px;
-    background-image: url('back.jpeg'); /* You can replace 'cookie.png' with your own cookie image */
-    background-size: cover;
+    background-image: url('back.jpeg');
     background-repeat: no-repeat;
     margin: 40px auto;
     cursor: pointer;
