--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-image: url("back.jpeg") ;
     text-align: center;
     transition: background-color 0.5s ease;
 }
@@ -8,7 +8,7 @@ body {
 .container {
     max-width: 400px;
     margin: 0 auto;
-    background-color: #fff;
+    background-color: wheat;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -18,7 +18,8 @@ body {
 .cookie {
     width: 200px;
     height: 200px;
-    background-image: url('back.jpeg');
+    
+    background-size: cover;
     background-repeat: no-repeat;
     margin: 40px auto;
     cursor: pointer;
@@ -27,6 +28,7 @@ body {
 
 .cookie:hover {
     transform: scale(1.1);
+    
 }
 
 #changeNameBtn {
@@ -42,4 +44,54 @@ body {
 
 #changeNameBtn:hover {
     background-color: #2980b9;
+}
+
+h1 {
+    font-size: 28px;
+    margin-bottom: 20px;
+    color: #333;
+}
+
+p {
+    font-size: 20px;
+    color: #555;
+    margin: 10px 0;
+    transition: color 0.5s ease;
+}
+
+#cookieCount:hover {
+    color: #e74c3c;
+}
+
+#cookieCount:after {
+    content: " Cookies";
+}
+
+input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    transition: border-color 0.3s ease;
+}
+
+input[type="text"]:focus {
+    border-color: #3498db;
+}
+#seeAllBakeriesBtn{
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: #3498db;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+
+}
+#seeAllBakeriesBtn:hover{
+    background-color: #2980b9;
+
 }
