--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 
 .container {
     max-width: 400px;
-    margin: 0 auto;
+    margin: 40px auto;
     background-color: wheat;
     padding: 20px;
     border-radius: 5px;
@@ -94,4 +94,18 @@ input[type="text"]:focus {
 #seeAllBakeriesBtn:hover{
     background-color: #2980b9;
 
+}
+#resetBtn{
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: #3498db;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+#resetBtn:hover{
+    background-color: #2980b9;
 }
