--- a/mstyles.css
+++ b/mstyles.css
@@ -6,12 +6,16 @@ body {
     background-repeat: no-repeat;
     background-size:1600px 800px ;
 }
-
+header{
+    margin-top: 90px;
+    font-family: cursive;
+    font-size: 90px;
+    color: burlywood;
+}
 .container {
     max-width: 400px;
-    margin: 200px auto;
+    margin: 10px auto;
     background-color:bisque;
-    
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
